Opened 7 years ago
Closed 7 years ago
#10115 closed bug (fixed)
Not updating "Status" upon failed package activation
Reported by: | mmadia | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
While trying to install distcc via HaikuDepot, the package failed to install. HaikuDepot kept the Status field at it's last percentage value (e.g., "95.80%", instead of resetting it back to "Available".
Terminal output:
~/Desktop> HaikuDepot Fatal error occurred while installing package vision_source: failed to find a match for "vision_source" () Fatal error occurred while installing package wpa_supplicant_source: failed to find a match for "wpa_supplicant_source" () Fatal error occurred while installing package distcc: failed to commit transaction ()
syslog:
KERN: package_daemon [6917093586: 435] KERN: Volume::_PackagesEntryCreated("distcc-3.1-2-x86_gcc2.hpkg") KERN: package_daemon [6917101834: 435] failed to init package for file "distcc-3.1-2-x86_gcc2.hpkg" KERN: package_daemon [6917110179: 435] Volume::_PackagesEntryRemoved("distcc-3.1-2-x86_gcc2.hpkg")
Change History (7)
comment:1 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
At least with the current distcc package this no longer occurs. If another way to reproduce it is found, please reopen, but it should theoretically be fixed at this point.
comment:4 by , 7 years ago
May I ask why you're reverting that one specifically? Also, what package(s) are involved?
comment:5 by , 7 years ago
hrev46284 fixed activation of the distcc package. List of involved packages:
groff-1.20.1-3-x86_gcc2.hpkg readline-6.2-3-x86_gcc2.hpkg distcc-3.1-2-x86_gcc2.hpkg nano-2.2.6-3-x86_gcc2.hpkg sqlite-3.8.0.2-1-x86_gcc2.hpkg python-2.6.8-4-x86_gcc2.hpkg
comment:6 by , 7 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Will dig into it after work, thanks for the testcase.
Please retry with hrev46352 or later and see if this reverts properly now.