HaikuDepot: Fix #10115.

- Also reset package state in the BFatalErrorException case.

- Show actual alerts for fatal install/uninstall errors rather than simply
  printing them to the console.